# employee-report

./: .coverage  .gitignore  .replit  README.md  pyproject.toml  readme.md  redme.md
scripts/: bdd.sh  test.sh
specs/: employee_spec.py
src/: employee.py  employee_data.py  employee_list.py  employee_listing.py  employee_report.py
tests/: employee_report_test.py
